force-app/main/default/objects/Apttus_Config2__PriceMatrixEntry__c/fields/Apttus_Config2__BandSize__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__BandSize__c</fullName>
    <description>The band size for a weighted range</description>
    <label>Band Size</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>