force-app/main/default/objects/Apttus_Config2__PriceMatrixEntry__c/fields/Apttus_Config2__Condition__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__Condition__c</fullName>
    <description>The condition specification</description>
    <label>Condition</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>