force-app/main/default/objects/Apttus_Config2__PriceMatrixEntry__c/fields/Apttus_Config2__EndFactor__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__EndFactor__c</fullName>
    <description>The end factor for a weighted range.</description>
    <label>End Factor</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>