force-app/main/default/objects/Apttus_Config2__PriceMatrixEntry__c/fields/Apttus_Config2__EntryKey__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__EntryKey__c</fullName>
    <description>The entry key used in keyed matrix pricing. Only applicable to dimension matrix.</description>
    <externalId>true</externalId>
    <inlineHelpText>The entry key used in keyed matrix pricing. Only applicable to dimension matrix.</inlineHelpText>
    <label>Entry Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>