force-app/main/default/objects/Apttus_Config2__PriceMatrixEntry__c/fields/Apttus_Config2__PriceMatrixId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__PriceMatrixId__c</fullName>
    <description>ID of the associated matrix</description>
    <label>Price Matrix</label>
    <referenceTo>Apttus_Config2__PriceMatrix__c</referenceTo>
    <relationshipLabel>Entries</relationshipLabel>
    <relationshipName>MatrixEntries</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>